[package]
name = "thumbor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
anyhow = "1.0"
base64 = "0.22.1"
bytes = "1.4.0"
image = "0.25.10"
lru = "0.16.3"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.14.0"
reqwest = "0.13.2"
serde ={ version = "1", features = ["derive"]}
tokio ={ version = "1", features = ["full"]}
tower ={ version = "0.5.3", features = ["util","timeout", "load-shed", "limit"]}
tower-http = {version = "0.6.8", features = ["add-extension", "compression-full", "trace", "cors"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi", "time"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.14.3"
